--- a/PdfTools/App.config
+++ b/PdfTools/App.config
@@ -1,6 +1,63 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PdfTools.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <PdfTools.Properties.Settings>
+            <setting name="SaveToSameDirectoryAsFirstSheet" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SaveDirectoryPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CreateCombinationFile" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CombinationFilePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SheetSeparator" serializeAs="String">
+                <value>_</value>
+            </setting>
+            <setting name="OpenAfterMerge" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowWidht" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="GridRowHeightTop" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="GridRowHeightBottom" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="Author" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Keywords" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Subject" serializeAs="String">
+                <value />
+            </setting>
+        </PdfTools.Properties.Settings>
+    </userSettings>
 </configuration>
